# e2e-object-detection

./: README.md  train.ipynb
server/: README.md  dev-requirements.txt  requirements.txt  setup.cfg
server/objdetserver/: Dockerfile  logging.py  yolo_handler.py
server/objdetserver/deploy/: constants.py
server/objdetserver/deploy/ec2/: README.md  asg_stack.yaml  cfn_stack.yaml  deploy.py  generate_user_data.py  user_data.sh
server/objdetserver/deploy/ecs/: README.md  deploy.py
server/objdetserver/handlers/: constants.py  detect_ops.py  preprocess.py  yolo_handler.py  yolo_handler_requirements.txt  yolo_onnx_handler.py  yolo_onnx_handler_requirements.txt  yolo_utils.py
server/objdetserver/scripts/: generate_mar.py  run_local_docker.py
server/tests/: conftest.py  yolo_handler_test.py  yolo_onnx_handler_test.py
server/tests/deploy/ec2/: generate_user_data_test.py
server/tests/integration/: generate_mar_test.py  handlers_test.py
server/tests/unit/: yolo_handler_test.py  yolo_onnx_handler_test.py
server/tests/unit/deploy/ec2/: generate_user_data_test.py
server/tests/unit/handlers/: yolo_handler_test.py  yolo_onnx_handler_test.py
server/torchserve/: README.md  detect_ops.py  preprocess.py  yolo_handler.py  yolo_handler_requirements.txt  yolo_onnx_handler.py  yolo_utils.py
server/torchserve/deploy/: deploy_utils.py
server/torchserve/deploy/ec2/: README.md  asg_stack.yaml  cfn_stack.yaml  deploy.py  generate_user_data.py
server/torchserve/deploy/ecs/: deploy.py  ecs_stack.yaml
server/torchserve/scripts/: generate_mar.py  run_local_docker.py
(+8 files in other folders)
