[metadata]
name = objdet-server
author = David Leon Fernandez
version = 1.0
description = Object detection server
long_description = YOLO v7 tiny object detection server built with TorchServe and AWS
keywords = object,detection,torchserve,aws,cv
license = MIT
url = 'https://github.com/davidleonfdez/e2e-object-detection'
[options]
install_requires =
    boto3
    captum
    torch
    torch-model-archiver
    # Temporary pin, latest version at the time of writing (0.7.0) doesn't work with ONNX
    torchserve==0.6.1
    torchvision
    # Temporary fix to TorchServe 0.6.1 bug. It's not actually needed for our handlers.
    pyyaml
packages = find:
[options.extras_require]
dev = 
    docker
    opencv-python >= 4.1.1
    pytest
